added nav linking to section, updated README file

--- a/index.html
+++ b/index.html
@@ -1,23 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Bradley Le's Portfolio</title>
     <link rel="stylsheet" href="/assets/reset.css">
     <link rel="stylsheet" href="/assets/style.css">
 </head>
 
-<body> 
+<body>
     <header>
-
+        <h1>Bradley Le</h1>
+        <nav>
+            <a href="#about">About Me</a>
+            <a href="#projects">Projects</a>
+            <a href="#resume">Resume</a>
+            <a href="#contact">Contact Me</a>
+        </nav>
     </header>
-    
+
     <main>
+        <section id="about">
+            <h2>About Me</h2>
+        </section>
+
+        <section id="projects">
+            <h2>Projects</h2>
+        </section>
+
+        <section id="resume">
+            <h2>Resume</h2>
+        </section>
+
+        <section id="contact">
+            <h2>Contact Me</h2>
+            <form>
+            </form>
+        </section>
 
     </main>
-    
+
+    <footer>
+
+    </footer>
+
 </body>
 
 </html>
