--- a/index.html
+++ b/index.html
@@ -6,44 +6,57 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bradley Le's Portfolio</title>
-    <link rel="stylsheet" href="/assets/reset.css">
-    <link rel="stylsheet" href="/assets/style.css">
+    <link rel="stylesheet" href="assets/CSS/reset.css">
+    <link rel="stylesheet" href="assets/CSS/style.css">
 </head>
 
 <body>
     <header>
-        <h1>Bradley Le</h1>
         <nav>
+            <span class="name">Bradley Le</span>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
-            <a href="#resume">Resume</a>
+            <a href="assets/Resume.pdf" target="_blank">Resume</a>
             <a href="#contact">Contact Me</a>
         </nav>
+        <img src="assets/Images/banner.jpg">
     </header>
 
     <main>
         <section id="about">
             <h2>About Me</h2>
+            <div class="intro">
+                <img src="assets/Images/self-portrait.jpg">
+                <p>
+                    Ever since I was young, I would be interested in technology. I remember being four years old and
+                    pressing random buttons on a keyboard just because I was interested in what it does. I had constant
+                    access to computers so I developed a deep interest in a future occupation that would involve around
+                    the use of a computer. During my time in college, I narrowed my interests to web developer and UI/UX
+                    designer because I enjoy visually seeing my work and how it affects users. Naturally, I decided to
+                    choose web developer as a more hands-on, technical occupation to persue.
+                </p>
+            </div>
         </section>
 
         <section id="projects">
             <h2>Projects</h2>
-        </section>
 
-        <section id="resume">
-            <h2>Resume</h2>
+
         </section>
 
         <section id="contact">
-            <h2>Contact Me</h2>
-            <form>
-            </form>
+            <h2 class="center">Contact Me</h2>
+            <ul>
+                <li><a href="#">brabrele@gmail.com</a></li>
+                <li><a href="https://github.com/PentaZoned">Github</a></li>
+                <li><a href="https://www.linkedin.com/in/bradley-le-/">LinkedIn</a></li>
+            </ul>
         </section>
 
     </main>
 
     <footer>
-
+        <span class="center">&copy 2021 Bradley Le</span>
     </footer>
 
 </body>
