changed banner, added placeholder images for projects, adjusted overall color theme

--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             <div class="intro">
                 <img src="assets/Images/self-portrait.jpg">
                 <p>
+                    I was born and raised in Hayward, CA. I live in a very diverse urban community.<br /><br />
+
+
                     Ever since I was young, I would be interested in technology. I remember being four years old and
                     pressing random buttons on a keyboard just because I was interested in what it does. I had constant
                     access to computers so I developed a deep interest in a future occupation that would involve around
@@ -40,14 +43,21 @@
 
         <section id="projects">
             <h2>Projects</h2>
-
-
+                <div class="card-cluster">
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/320x320.png" class="card"/></a>
+                    <div class="card-mini">
+                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
+                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
+                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
+                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
+                    </div>
+                </div> 
         </section>
 
         <section id="contact">
-            <h2 class="center">Contact Me</h2>
+            <h2>Contact Me</h2>
             <ul>
-                <li><a href="#">brabrele@gmail.com</a></li>
+                <li><a href="mailto:brabrele@gmail.com">brabrele@gmail.com</a></li>
                 <li><a href="https://github.com/PentaZoned">Github</a></li>
                 <li><a href="https://www.linkedin.com/in/bradley-le-/">LinkedIn</a></li>
             </ul>
@@ -60,5 +70,4 @@
     </footer>
 
 </body>
-
 </html>
