added comments to css and html file, and added alt text to images

--- a/index.html
+++ b/index.html
@@ -12,24 +12,28 @@
 
 <body>
     <header>
+        <!--nav bar that links to the corresponding section-->
         <nav>
+
             <span class="name">Bradley Le</span>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
+            <!--Resume section links to a pdf file loaded in the browser in a new tab-->
             <a href="assets/Resume.pdf" target="_blank">Resume</a>
             <a href="#contact">Contact Me</a>
         </nav>
-        <img src="assets/Images/banner.jpg">
+        <img src="assets/Images/banner.jpg" alt="banner of cartoon planets and stars">
     </header>
 
     <main>
+        <!--About-Me section-->
         <section id="about">
             <h2>About Me</h2>
             <div class="intro">
                 <img src="assets/Images/self-portrait.jpg">
+                <!--Biography-->
                 <p>
                     I was born and raised in Hayward, CA. I live in a very diverse urban community.<br /><br />
-
 
                     Ever since I was young, I would be interested in technology. I remember being four years old and
                     pressing random buttons on a keyboard just because I was interested in what it does. I had constant
@@ -41,19 +45,20 @@
             </div>
         </section>
 
+        <!--Section of previous work-->
         <section id="projects">
             <h2>Projects</h2>
+                <!---->
                 <div class="card-cluster">
-                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/320x320.png" class="card"/></a>
-                    <div class="card-mini">
-                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
-                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
-                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
-                        <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card"/></a>
-                    </div>
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/320x320.png" class="card" alt="placeholder picture"/></a>
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card" alt="placeholder picture"/></a>
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card" alt="placeholder picture"/></a>
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card" alt="placeholder picture"/></a>
+                    <a href="#"><img src="https://image-placeholder.com/images/actual-size/250x250.png" class="card" alt="placeholder picture"/></a>
                 </div> 
         </section>
 
+        <!--Section of Contact information-->
         <section id="contact">
             <h2>Contact Me</h2>
             <ul>
@@ -66,7 +71,7 @@
     </main>
 
     <footer>
-        <span class="center">&copy 2021 Bradley Le</span>
+        <span>&copy 2021 Bradley Le</span>
     </footer>
 
 </body>
