updated README file

--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
     <header>
         <!--nav bar that links to the corresponding section-->
         <nav>
-
             <span class="name">Bradley Le</span>
             <a href="#about">About Me</a>
             <a href="#projects">Projects</a>
@@ -33,7 +32,7 @@
                 <img src="assets/Images/self-portrait.jpg">
                 <!--Biography-->
                 <p>
-                    I was born and raised in Hayward, CA. I live in a very diverse urban community.<br /><br />
+                    My name is Bradley Le. I was born and raised in Hayward, CA. I live in a very diverse urban community.<br /><br />
 
                     Ever since I was young, I would be interested in technology. I remember being four years old and
                     pressing random buttons on a keyboard just because I was interested in what it does. I had constant
